_notes/errbyfile/PlayerHelper.java.txt
ru\metaculture\protection\PlayerHelper.java:601: error: incompatible 
types: Object cannot be converted to String
            for (String var10 : var8) {
                                ^

  ru\metaculture\protection\PlayerHelper.java:601: error: incompatible 
types: Object cannot be converted to String
              for (String var10 : var8) {
                                  ^
